# sdddst

./: 2D_DDD_simulation.vcxproj  2D_DDD_simulation.vcxproj.filters  CMakeLists.txt  README.md  SDDST.sln  sdddstCMakeConfig.h.in
cmake/: FindFFTW.cmake  FindLapacke.cmake  FindUmfpack.cmake
include/: avg_speed_analyser.h  constants.h  data_time_series.h  dislocation.h  point_defect.h  precision_handler.h  project_parser.h  simulation.h  simulation_data.h  spectral_decompositor.h  time_series_processor.h  utility.h
include/Fields/: AnalyticField.h  Field.h  PeriodicShearStressELTE.h
include/StressProtocols/: fixed_rate_protocol.h  spring_protocol.h  stress_protocol.h
init_config_gen/: README.md  init_config_gen.cpp  init_config_gen.vcxproj  init_config_gen.vcxproj.filters
python/include/: analytic_field_wrapper.h  dislocation_wrapper.h  field_wrapper.h  fixed_rate_protocol_wrapper.h  periodic_shear_stress_ELTE_wrapper.h  point_defect_wrapper.h  simulation_data_wrapper.h  stress_protocol_wrapper.h  utility_wrapper.h
python/src/: analytic_field_wrapper.cpp  dislocation_wrapper.cpp  field_wrapper.cpp  fixed_rate_protocol_wrapper.cpp  periodic_shear_stress_ELTE_wrapper.cpp  point_defect_wrapper.cpp  simulation_data_wrapper.cpp  stress_protocol_wrapper.cpp  utility_wrapper.cpp
src/: avg_speed_analyser.cpp  bindings.cpp  data_time_series.cpp  main.cpp  precision_handler.cpp  project_parser.cpp  sdddstCMakeConfig.h  simulation.cpp  simulation_data.cpp  spectral_decompositor.cpp  time_series_processor.cpp
src/Fields/: AnalyticField.cpp  Field.cpp  PeriodicShearStressELTE.cpp
src/StressProtocols/: fixed_rate_protocol.cpp  spring_protocol.cpp  stress_protocol.cpp
